# cmake-tutorial

./: cmake_options.txt
Practices/: CMakeLists.txt
Practices/cmake/: check-compiler-flag.cmake
Practices/src/: CMakeLists.txt  main.cpp
Practices/test/: CMakeLists.txt
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt
Step3/: CMakeLists.txt
Step4/: CMakeLists.txt
Step4/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step5/: tutorial.cxx
Step6/: CMakeLists.txt  tutorial.cxx
Step6/MathFunctions/: CMakeLists.txt
Step7/: CMakeLists.txt  CMakeLists.txt.bak  CTestConfig.cmake  tutorial.cxx.bak
Step7/MathFunctions/: CMakeLists.txt.bak  MakeTable.cxx.bak
